- Added an endpoint to return CommentsWithUserInfo (comments with users info for a certain post) - Added an endpoint to return comments count for certain post - fixed getUsersInteractedWithPost in Users controller